--- a/in-game.html
+++ b/in-game.html
@@ -2,7 +2,7 @@
 <html lang="it">
 
 <head>
-	<title>Promozioni</title>
+	<title>In Game</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<div class="betnero_wrapper">
+	<div class="betnero_wrapper betnero_logged-in">
 		<header class="betnero_header">
 			<div id="betnero_header_simplebar" class="container-fluid betnero_header__container">
 
@@ -196,7 +196,6 @@
 
 
 
-
 			<!-- SECTION top-line -->
 			<div class="betnero_top-line">
 				<div class="container-fluid betnero_top-line__container">
@@ -211,321 +210,33 @@
 
 
 
-
-
-			<!-- SECTION TOP DESCRIPTION -->
-			<section class="betnero_top-description betnero_first-section">
-				<div class="container-fluid betnero_top-description__container betnero_bg-color-2">
-
-					<!-- breadcrumbs -->
-					<nav aria-label="breadcrumb">
-						<ol class="breadcrumb betnero_breadcrumbs">
-							<li class="breadcrumb-item betnero_breadcrumbs__item"><a href="#">Home</a></li>
-							<li class="breadcrumb-item betnero_breadcrumbs__item active" aria-current="page">Promozioni</li>
-						</ol>
-					</nav>
-					<!-- end of breadcrumbs -->
-
-					<h1 class="betnero_top-description__title">
-						Bingo
-					</h1>
-					<div class="betnero_top-description__text">
-						<p>Entra nel Casinò di BetNero e scopri come ricevere il Miglior Bonus Benvenuto per giocare e
-							divertirti con le ♥ Slot Machine, la ♠ Roulette, il ♣ Blackjack, i ♦ Giochi da Tavolo e del ★
-							Casino Live. Non perderti le incredibili promozioni che il Casinò di BetNero ti ha riservato!</p>
-						<!-- SHOW MORE BLOCK -->
-						<div data-showmore class="betnero_show-more">
-							<div data-showmore-content="0" class="betnero_show-more__content">
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi?</p>
-								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad culpa quibusdam qui, rerum
-									officiis consectetur placeat eius corrupti doloribus libero.</p>
-							</div>
-							<button hidden data-showmore-button type="button" class="betnero_show-more__more"><span>Mostra
-									tutto <img src="img/icons/show-more.svg" alt="more"></span><span>Mostra meno<img src="img/icons/show-less.svg" alt="less"></span></button>
+			<!-- GAME -->
+			<div class="row">
+				<div class="col betnero_game-wrapper">
+					<div class="betnero_game">
+						<div class="betnero_game-content">
+							<!-- There should be a game here -->
+							<!-- There should be a game here -->
+							<!-- There should be a game here -->
 						</div>
-						<!-- end of SHOW MORE BLOCK -->
-					</div>
-				</div>
-			</section>
-			<!-- End of SECTION TOP DESCRIPTION -->
-
-
-
-
-			<!-- SECTION PROMO CARDS -->
-			<section class="betnero_games">
-				<div class="container-fluid betnero_games__container betnero_bg-color-1">
-
-					<!-- CARDS -->
-					<div class="betnero_promo-cards">
-						<!-- CARD -->
-						<div class="card betnero_promo-card">
-							<div class="card-img-top betnero_promo-card__image">
-								<img src="img/promo-small-01.jpg" class="img-fluid" alt="promo">
-							</div>
-							<h4 class="card-title betnero_promo-card__title">Casino Bonus Senza Deposito...</h4>
-							<div class="card-text betnero_promo-card__text">
-								<p>Calling all Live Casino players! CasinoFriday knows it isn’t one size fits all, that’s why we
-									are offering Live Casino players a first time deposit offer up to €500!</p>
-							</div>
-							<a href="promo.html" class="btn betnero_promo-card__button">Scopri di PIù</a>
-						</div>
-						<!-- end of CARD -->
-
-						<!-- CARD -->
-						<div class="card betnero_promo-card">
-							<div class="card-img-top betnero_promo-card__image">
-								<img src="img/promo-small-01.jpg" class="img-fluid" alt="promo">
-							</div>
-							<h4 class="card-title betnero_promo-card__title">Your €500 Live Casino Welcome...</h4>
-							<div class="card-text betnero_promo-card__text">
-								<p>Calling all Live Casino players! CasinoFriday knows it isn’t one size fits all, that’s why we
-									are offering Live Casino players a first time deposit offer up to €500!</p>
-							</div>
-							<a href="promo.html" class="btn betnero_promo-card__button">Scopri di PIù</a>
-						</div>
-						<!-- end of CARD -->
-
-						<!-- CARD -->
-						<div class="card betnero_promo-card">
-							<div class="card-img-top betnero_promo-card__image">
-								<img src="img/promo-small-01.jpg" class="img-fluid" alt="promo">
-							</div>
-							<h4 class="card-title betnero_promo-card__title">Your €500 Live Casino Welcome...</h4>
-							<div class="card-text betnero_promo-card__text">
-								<p>Calling all Live Casino players! CasinoFriday knows it isn’t one size fits all, that’s why we
-									are offering Live Casino players a first time deposit offer up to €500!</p>
-							</div>
-							<a href="promo.html" class="btn betnero_promo-card__button">Scopri di PIù</a>
-						</div>
-						<!-- end of CARD -->
-
-						<!-- CARD -->
-						<div class="card betnero_promo-card">
-							<div class="card-img-top betnero_promo-card__image">
-								<img src="img/promo-small-01.jpg" class="img-fluid" alt="promo">
-							</div>
-							<h4 class="card-title betnero_promo-card__title">Your €500 Live Casino Welcome...</h4>
-							<div class="card-text betnero_promo-card__text">
-								<p>Calling all Live Casino players! CasinoFriday knows it isn’t one size fits all, that’s why we
-									are offering Live Casino players a first time deposit offer up to €500!</p>
-							</div>
-							<a href="promo.html" class="btn betnero_promo-card__button">Scopri di PIù</a>
-						</div>
-						<!-- end of CARD -->
-
-						<!-- CARD -->
-						<div class="card betnero_promo-card">
-							<div class="card-img-top betnero_promo-card__image">
-								<img src="img/promo-small-01.jpg" class="img-fluid" alt="promo">
-							</div>
-							<h4 class="card-title betnero_promo-card__title">Your €500 Live Casino Welcome...</h4>
-							<div class="card-text betnero_promo-card__text">
-								<p>Calling all Live Casino players! CasinoFriday knows it isn’t one size fits all, that’s why we
-									are offering Live Casino players a first time deposit offer up to €500!</p>
-							</div>
-							<a href="promo.html" class="btn betnero_promo-card__button">Scopri di PIù</a>
-						</div>
-						<!-- end of CARD -->
-
-						<!-- CARD -->
-						<div class="card betnero_promo-card">
-							<div class="card-img-top betnero_promo-card__image">
-								<img src="img/promo-small-01.jpg" class="img-fluid" alt="promo">
-							</div>
-							<h4 class="card-title betnero_promo-card__title">Your €500 Live Casino Welcome...</h4>
-							<div class="card-text betnero_promo-card__text">
-								<p>Calling all Live Casino players! CasinoFriday knows it isn’t one size fits all, that’s why we
-									are offering Live Casino players a first time deposit offer up to €500!</p>
-							</div>
-							<a href="promo.html" class="btn betnero_promo-card__button">Scopri di PIù</a>
-						</div>
-						<!-- end of CARD -->
-
-					</div>
-					<!-- end of CARDS -->
-
-				</div>
-			</section>
-			<!-- End of SECTION PROMO CARDS -->
-
-
-
-
-
-			<!-- SECTION INFO BLOCK -->
-			<section class="betnero_info-block">
-				<div class="container-fluid betnero_info-block__container betnero_bg-color-2">
-
-					<!-- TEXT-BLOCK -->
-					<div class="betnero_info-block__text-block">
-						<h3 class="betnero_info-block__text-block_title">
-							Bonus di Benvenuto 1300€
-						</h3>
-						<p>Apri un account su BetNero e ottieni un <a href="https://www.betnero.it/promozioni/bonus-benvenuto.html">Mega Bonus di Benvenuto</a> fino a
-							1300 euro. È la migliore offerta che puoi trovare oggi nei casino online AAMS. Nessun altra sala ti
-							offre un bonus spalmabile nei primi 5 giorni in cui depositi, anche non consecutivi. Questo
-							significa che avrai diritto a 5 bonus per 5 depositi, per complessivi 1300 euro!</p>
-					</div>
-					<!-- end of TEXT-BLOCK -->
-
-					<!-- TEXT-BLOCK -->
-					<div class="betnero_info-block__text-block">
-						<h3 class="betnero_info-block__text-block_title">
-							Casino Bonus Senza Deposito 10€
-						</h3>
-						<p>Per te ecco subito un altro regalo: 10 euro gratis per provare i nostri giochi! Un <a href="https://www.betnero.it/promozioni/casino-bonus-senza-deposito.html">casino bonus senza
-								deposito</a> 10 euro per farti scoprire la grande qualità del casinò online di Betnero. Non devi
-							versare nulla, crea soltanto un account nella nostra sala e completa l’attivazione inviando la
-							copia di un tuo documento, per ricevere adesso questo fantastico omaggio.</p>
-					</div>
-					<!-- end of TEXT-BLOCK -->
-
-					<!-- TEXT-BLOCK -->
-					<div class="betnero_info-block__text-block">
-						<h3 class="betnero_info-block__text-block_title">
-							Bonus Scommesse Betnero
-						</h3>
-						<p>Betnero è l'unico operatore di gioco in Italia che ti opermette di ottenere un real bonus per le
-							scommesse sportive in contemporanea al bonus per il casinò. Sul tuo primo deposito puoi guadagnare
-							il 10% fino a 10 euro da giocare nella nostra sezione delle scommesse sportive. Oltre a questo
-							avrai diritto anche al 100% di bonus casino, fino a 200euro.</p>
-					</div>
-					<!-- end of TEXT-BLOCK -->
-
-
-					<!-- ROW WITH SMALL THUMBS -->
-					<div class="betnero_games__row betnero_small-thumbs">
-						<h4 class="betnero_games__row_rubric">
-							<span>Top Slot</span>
-							<img src="img/icons/arrow-green.svg" alt="arrow">
-						</h4>
-						<div class="betnero_games__thumbs">
-
-							<!-- Slider wrapper -->
-							<div class="games-thumbs__slider-1 swiper">
-								<!-- The moving part of the slider -->
-								<div class="games-thumbs__wrapper swiper-wrapper">
-									<!-- Slide -->
-									<div class="games-thumbs__slide swiper-slide">
-										<a href="in-game.html">
-											<div class="betnero_games__thumb">
-												<img src="img/thumbs/thumb-1.jpg" alt="thumb">
-											</div>
-										</a>
-									</div>
-									<!-- Slide -->
-									<div class="games-thumbs__slide swiper-slide">
-										<a href="in-game.html">
-											<div class="betnero_games__thumb">
-												<img src="img/thumbs/thumb-2.jpg" alt="thumb">
-											</div>
-										</a>
-									</div>
-									<!-- Slide -->
-									<div class="games-thumbs__slide swiper-slide">
-										<a href="in-game.html">
-											<div class="betnero_games__thumb">
-												<img src="img/thumbs/thumb-3.jpg" alt="thumb">
-											</div>
-										</a>
-									</div>
-									<!-- Slide -->
-									<div class="games-thumbs__slide swiper-slide">
-										<a href="in-game.html">
-											<div class="betnero_games__thumb">
-												<img src="img/thumbs/thumb-4.jpg" alt="thumb">
-											</div>
-										</a>
-									</div>
-									<!-- Slide -->
-									<div class="games-thumbs__slide swiper-slide">
-										<a href="in-game.html">
-											<div class="betnero_games__thumb">
-												<img src="img/thumbs/thumb-5.jpg" alt="thumb">
-											</div>
-										</a>
-									</div>
-									<!-- Slide -->
-									<div class="games-thumbs__slide swiper-slide">
-										<a href="in-game.html">
-											<div class="betnero_games__thumb">
-												<img src="img/thumbs/thumb-6.jpg" alt="thumb">
-											</div>
-										</a>
-									</div>
-									<!-- Slide -->
-									<div class="games-thumbs__slide swiper-slide">
-										<a href="in-game.html">
-											<div class="betnero_games__thumb">
-												<img src="img/thumbs/thumb-1.jpg" alt="thumb">
-											</div>
-										</a>
-									</div>
-									<!-- Slide -->
-									<div class="games-thumbs__slide swiper-slide">
-										<a href="in-game.html">
-											<div class="betnero_games__thumb">
-												<img src="img/thumbs/thumb-2.jpg" alt="thumb">
-											</div>
-										</a>
-									</div>
-									<!-- Slide -->
-									<div class="games-thumbs__slide swiper-slide">
-										<a href="in-game.html">
-											<div class="betnero_games__thumb">
-												<img src="img/thumbs/thumb-3.jpg" alt="thumb">
-											</div>
-										</a>
-									</div>
-									<!-- Slide -->
-									<div class="games-thumbs__slide swiper-slide">
-										<a href="in-game.html">
-											<div class="betnero_games__thumb">
-												<img src="img/thumbs/thumb-4.jpg" alt="thumb">
-											</div>
-										</a>
-									</div>
-									<!-- Slide -->
-									<div class="games-thumbs__slide swiper-slide">
-										<a href="in-game.html">
-											<div class="betnero_games__thumb">
-												<img src="img/thumbs/thumb-5.jpg" alt="thumb">
-											</div>
-										</a>
-									</div>
-									<!-- Slide -->
-									<div class="games-thumbs__slide swiper-slide">
-										<a href="in-game.html">
-											<div class="betnero_games__thumb">
-												<img src="img/thumbs/thumb-6.jpg" alt="thumb">
-											</div>
-										</a>
-									</div>
-								</div>
-
-								<!-- Buttons for navigation (left/right) -->
-								<button type="button" class="betnero_swiper-button-prev-1">
-									<img src="img/icons/arrow-white-left.svg" alt="left">
+						<div class="betnero_game-cover">
+							<div class="betnero_game-cover__content">
+								<button id="betnero_prova" class="btn betnero_button-blue">Prova</button>
+								<!-- Button trigger modal -->
+								<button class="btn betnero_button-green" data-bs-toggle="modal" data-bs-target="#betnero_login">
+									<img src="img/icons/play-btn.svg" alt="play">
+									<h1>GIOCHA</h1>
 								</button>
-								<button type="button" class="betnero_swiper-button-next-1">
-									<img src="img/icons/arrow-white-right.svg" alt="right">
-								</button>
-
 							</div>
-
+						</div>
+						<div class="betnero_aside-buttons">
+							<a href="live-casino.html" class="btn betnero_btn-close"></a>
+							<button id="betnero_fullscreen_btn" class="btn betnero_button-fullscreen"></button>
 						</div>
 					</div>
-					<!-- end of ROW WITH SMALL THUMBS -->
-
-
 				</div>
-			</section>
-			<!-- End of SECTION INFO BLOCK -->
-
-
-
-
+			</div>
+			<!-- End of GAME -->
 
 
 
