--- a/search.html
+++ b/search.html
@@ -6,9 +6,9 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230511215931" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230511215931"> -->
-	<link rel="stylesheet" href="css/style.css?_v=20230511215931">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230515014245" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230515014245"> -->
+	<link rel="stylesheet" href="css/style.css?_v=20230515014245">
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -38,8 +38,9 @@
 
 					</div>
 					<div class="row betnero_header__buttons">
-						<div class="col-auto"><a href="" class="btn betnero_header__button-login">LOGIN</a></div>
-						<div class="col-auto"><a href="" class="btn betnero_header__button-reg">REGISTRATI</a></div>
+						<!-- Button trigger modal -->
+						<div class="col-auto"><button class="btn betnero_header__button-login" data-bs-toggle="modal" data-bs-target="#betnero_login">LOGIN</button></div>
+						<div class="col-auto"><a href="registration.html" class="btn betnero_header__button-reg">REGISTRATI</a></div>
 
 					</div>
 				</div>
@@ -47,8 +48,9 @@
 				<a href="home.html" class="betnero_header__logo betnero_header__logo-pc"><img src="img/logo.svg" alt="logo"></a>
 
 				<div class="row betnero_header__buttons">
-					<div class="col-auto"><a href="" class="btn betnero_header__button-login">LOGIN</a></div>
-					<div class="col-auto"><a href="" class="btn betnero_header__button-reg">REGISTRATI</a></div>
+					<!-- Button trigger modal -->
+					<div class="col-auto"><button href="" class="btn betnero_header__button-login" data-bs-toggle="modal" data-bs-target="#betnero_login">LOGIN</button></div>
+					<div class="col-auto"><a href="registration.html" class="btn betnero_header__button-reg">REGISTRATI</a></div>
 				</div>
 
 				<div class="betnero_header__menu betnero_menu">
@@ -95,7 +97,8 @@
 										<div class="accordion-body">
 											<ul>
 												<li class="nav-item"><a class="nav-link" href="casino.html">Più popolari</a></li>
-												<li class="nav-item"><a class="nav-link" href="casino-subcategory.html">Slot Machine</a></li>
+												<li class="nav-item"><a class="nav-link" href="casino-subcategory.html">Slot Machine</a>
+												</li>
 												<li class="nav-item"><a class="nav-link" href="">Roulette Online</a></li>
 												<li class="nav-item"><a class="nav-link" href="">Blackjack Online</a></li>
 												<li class="nav-item"><a class="nav-link" href="">Giochi da tavolo</a></li>
@@ -279,8 +282,131 @@
 			</div>
 		</div>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230511215931" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-	<script src="js/app.min.js?_v=20230511215931"></script>
+	<!-- Modal -->
+	<div class="modal fade" id="betnero_login" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="staticBackdropLabel">Dati di acceso:</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<form id="betnero_login-form" action="#" method="POST">
+						<div class="form__line">
+							<input type="text" name="Username" placeholder="Username" class="input betnero_form-item">
+						</div>
+						<div class="form__line">
+							<input autocomplete="off" type="password" name="loginPassword" placeholder="Password" class="input betnero_form-item betnero_password">
+							<button class="form__viewpass" type="button"></button>
+						</div>
+						<div class="betnero_login-error betnero_hide-error">
+							Dati di accesso errati
+						</div>
+						<button type="submit" class="button betnero_form-btn">Login</button>
+					</form>
+				</div>
+				<div class="modal-footer">
+					<p>Password dimenticata? <a href="">Modifica</a></p>
+					<p>Non hai un conto con noi? <a href="">Registrati</a></p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+	<!-- Modal -->
+	<div class="modal fade" id="betnero_filter" tabindex="-1" aria-labelledby="betnero_filterLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div class="betnero_games__filters">
+						<div class="betnero_games__filters__row">
+							<div class="betnero_games__filters__col">
+								<div class="betnero_games__filters__wrapper">
+									<div class="betnero_label-mobile">
+										<span>Filtrare i giochi</span>
+										<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+											<!-- <img class="betnero_filters_close" src="img/icons/close.svg" alt="close"> -->
+										</button>
+									</div>
+
+									<div class="betnero_games__filters__item">
+										<select class="form-select" data-show-selected data-show name="filter-1" data-class-modif="form">
+											<option value="1" selected>Scegli il fornitore</option>
+											<option value="2">Mostra tutti</option>
+											<option value="3">Evolution</option>
+											<option value="4">Pragmatic</option>
+										</select>
+									</div>
+									<div class="betnero_games__filters__item">
+										<select class="form-select" data-show-selected name="filter-2" data-class-modif="form">
+											<option value="1" selected>Scegli il tema</option>
+											<option value="2">Mostra tutti</option>
+											<option value="3">Evolution</option>
+											<option value="4">Pragmatic</option>
+										</select>
+									</div>
+									<div class="betnero_games__filters__item">
+										<select class="form-select" data-show-selected name="filter-3" data-class-modif="form">
+											<option value="1" selected>linee di pagamento</option>
+											<option value="2">Mostra tutti</option>
+											<option value="3">Evolution</option>
+											<option value="4">Pragmatic</option>
+										</select>
+									</div>
+								</div>
+							</div>
+							<div class="betnero_games__filters__col">
+								<div class="betnero_games__filters__wrapper">
+									<div class="betnero_games__filters__item">
+										<div class="betnero_games__filters__item-row">
+											<div class="betnero_games__filters__item-label">
+												Ordina Per
+											</div>
+											<div class="betnero_games__filters__item-content">
+												<select class="form-select" data-show-selected name="filter-4" data-class-modif="form">
+													<option value="1" selected>Consigliati</option>
+													<option value="2">item 2</option>
+													<option value="3">item 3</option>
+												</select>
+											</div>
+										</div>
+									</div>
+									<div class="betnero_games__filters__item">
+										<div class="betnero_games__filters__item-row">
+											<div class="betnero_games__filters__item-label">
+												Visualizza per
+											</div>
+											<div class="betnero_games__filters__item-content">
+												<select class="form-select" data-show-selected name="filter-5" data-class-modif="form">
+													<option value="6" selected>6</option>
+													<option value="12">12</option>
+													<option value="18">18</option>
+												</select>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<button class="btn betnero_games__filters-button">Filtrare</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end of Modal -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230515014245" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="js/app.min.js?_v=20230515014245"></script>
 </body>
 
 </html>
