--- a/home-logged.html
+++ b/home-logged.html
@@ -6,9 +6,9 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230515014245" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230515014245"> -->
-	<link rel="stylesheet" href="css/style.css?_v=20230515014245">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230530035353" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230530035353"> -->
+	<link rel="stylesheet" href="css/style.css?_v=20230530035353">
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -193,7 +193,7 @@
 				</a>
 			</div>
 		</header>
-		<main class="page">
+		<main class="page betnero_logged-in">
 
 
 
@@ -315,7 +315,7 @@
 						<div class="col-md-6 betnero_section__col-left">
 							<div class="betnero_section__content betnero_scommesse__content">
 								<h2 class="betnero_section__title">
-									<span>SCOMMESSE<br>SPORTIVE</span>
+									<span>SCOMMESSE SPORTIVE</span>
 								</h2>
 								<div class="betnero_section__text">Scommetti su centinaia di eventi sportivi con le migliori
 									quotye del settore, dal calcio al tennis, fino alla formula 1 e gli spettacoli televisivi!
@@ -904,13 +904,6 @@
 
 
 
-
-
-
-
-
-
-
 		</main>
 		<footer class="betnero_footer">
 			<div class="container-fluid betnero_footer__container">
@@ -1102,8 +1095,8 @@
 		</div>
 	</div>
 	<!-- end of Modal -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230515014245" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-	<script src="js/app.min.js?_v=20230515014245"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230530035353" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="js/app.min.js?_v=20230530035353"></script>
 </body>
 
 </html>
