--- a/registration.html
+++ b/registration.html
@@ -6,9 +6,9 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230515014245" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230515014245"> -->
-	<link rel="stylesheet" href="css/style.css?_v=20230515014245">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230530035353" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230530035353"> -->
+	<link rel="stylesheet" href="css/style.css?_v=20230530035353">
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -404,11 +404,11 @@
 									<div class="betnero_register__line">
 										<div class="input-group betnero_flex">
 											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="radio" id="betnero_maschio" name="sex" value="maschio">
+												<input class="form-check-input" type="radio" id="betnero_maschio" name="gender" value="maschio">
 												<label class="form-check-label" for="betnero_maschio">Maschio</label>
 											</div>
 											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="radio" id="betnero_femmina" name="sex" value="femmina">
+												<input class="form-check-input" type="radio" id="betnero_femmina" name="gender" value="femmina">
 												<label class="form-check-label" for="betnero_femmina">Femmina</label>
 											</div>
 										</div>
@@ -554,12 +554,12 @@
 									<div class="betnero_register__line">
 										<div class="input-group betnero_flex">
 											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="radio" id="betnero_si" name="carica" value="si">
-												<label class="form-check-label" for="betnero_si">Si</label>
+												<input class="form-check-input" type="radio" id="betnero_si_1" name="carica" value="si">
+												<label class="form-check-label" for="betnero_si_1">Si</label>
 											</div>
 											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="radio" id="betnero_no" name="carica" value="no">
-												<label class="form-check-label" for="betnero_no">No</label>
+												<input class="form-check-input" type="radio" id="betnero_no_1" name="carica" value="no">
+												<label class="form-check-label" for="betnero_no_1">No</label>
 											</div>
 										</div>
 									</div>
@@ -594,12 +594,12 @@
 									<div class="betnero_register__line">
 										<div class="input-group betnero_flex">
 											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="radio" id="betnero_si" name="privaci-1" value="si">
-												<label class="form-check-label" for="betnero_si">Si</label>
+												<input class="form-check-input" type="radio" id="betnero_si_2" name="privaci-1" value="si">
+												<label class="form-check-label" for="betnero_si_2">Si</label>
 											</div>
 											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="radio" id="betnero_no" name="privaci-1" value="no">
-												<label class="form-check-label" for="betnero_no">No</label>
+												<input class="form-check-input" type="radio" id="betnero_no_2" name="privaci-1" value="no">
+												<label class="form-check-label" for="betnero_no_2">No</label>
 											</div>
 										</div>
 									</div>
@@ -611,12 +611,12 @@
 									<div class="betnero_register__line">
 										<div class="input-group betnero_flex">
 											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="radio" id="betnero_si" name="privaci-2" value="si">
-												<label class="form-check-label" for="betnero_si">Si</label>
+												<input class="form-check-input" type="radio" id="betnero_si_3" name="privaci-2" value="si">
+												<label class="form-check-label" for="betnero_si_3">Si</label>
 											</div>
 											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="radio" id="betnero_no" name="privaci-2" value="no">
-												<label class="form-check-label" for="betnero_no">No</label>
+												<input class="form-check-input" type="radio" id="betnero_no_3" name="privaci-2" value="no">
+												<label class="form-check-label" for="betnero_no_3">No</label>
 											</div>
 										</div>
 									</div>
@@ -639,12 +639,12 @@
 												</h5>
 												<div class="input-group betnero_flex">
 													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio" id="betnero_si" name="mail-1" value="si">
-														<label class="form-check-label" for="betnero_si">Si</label>
+														<input class="form-check-input" type="radio" id="betnero_si_4" name="mail-1" value="si">
+														<label class="form-check-label" for="betnero_si_4">Si</label>
 													</div>
 													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio" id="betnero_no" name="mail-1" value="no">
-														<label class="form-check-label" for="betnero_no">No</label>
+														<input class="form-check-input" type="radio" id="betnero_no_4" name="mail-1" value="no">
+														<label class="form-check-label" for="betnero_no_4">No</label>
 													</div>
 												</div>
 											</div>
@@ -657,12 +657,12 @@
 												</h5>
 												<div class="input-group betnero_flex">
 													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio" id="betnero_si" name="notifiche-1" value="si">
-														<label class="form-check-label" for="betnero_si">Si</label>
+														<input class="form-check-input" type="radio" id="betnero_si_5" name="notifiche-1" value="si">
+														<label class="form-check-label" for="betnero_si_5">Si</label>
 													</div>
 													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio" id="betnero_no" name="notifiche-1" value="no">
-														<label class="form-check-label" for="betnero_no">No</label>
+														<input class="form-check-input" type="radio" id="betnero_no_5" name="notifiche-1" value="no">
+														<label class="form-check-label" for="betnero_no_5">No</label>
 													</div>
 												</div>
 											</div>
@@ -675,12 +675,12 @@
 												</h5>
 												<div class="input-group betnero_flex">
 													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio" id="betnero_si" name="telefon-1" value="si">
-														<label class="form-check-label" for="betnero_si">Si</label>
+														<input class="form-check-input" type="radio" id="betnero_si_6" name="telefon-1" value="si">
+														<label class="form-check-label" for="betnero_si_6">Si</label>
 													</div>
 													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio" id="betnero_no" name="telefon-1" value="no">
-														<label class="form-check-label" for="betnero_no">No</label>
+														<input class="form-check-input" type="radio" id="betnero_no_6" name="telefon-1" value="no">
+														<label class="form-check-label" for="betnero_no_6">No</label>
 													</div>
 												</div>
 											</div>
@@ -708,12 +708,12 @@
 												</h5>
 												<div class="input-group betnero_flex">
 													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio" id="betnero_si" name="mail-2" value="si">
-														<label class="form-check-label" for="betnero_si">Si</label>
+														<input class="form-check-input" type="radio" id="betnero_si_7" name="mail-2" value="si">
+														<label class="form-check-label" for="betnero_si_7">Si</label>
 													</div>
 													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio" id="betnero_no" name="mail-2" value="no">
-														<label class="form-check-label" for="betnero_no">No</label>
+														<input class="form-check-input" type="radio" id="betnero_no_7" name="mail-2" value="no">
+														<label class="form-check-label" for="betnero_no_7">No</label>
 													</div>
 												</div>
 											</div>
@@ -726,12 +726,12 @@
 												</h5>
 												<div class="input-group betnero_flex">
 													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio" id="betnero_si" name="notifiche-2" value="si">
-														<label class="form-check-label" for="betnero_si">Si</label>
+														<input class="form-check-input" type="radio" id="betnero_si_8" name="notifiche-2" value="si">
+														<label class="form-check-label" for="betnero_si_8">Si</label>
 													</div>
 													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio" id="betnero_no" name="notifiche-2" value="no">
-														<label class="form-check-label" for="betnero_no">No</label>
+														<input class="form-check-input" type="radio" id="betnero_no_8" name="notifiche-2" value="no">
+														<label class="form-check-label" for="betnero_no_8">No</label>
 													</div>
 												</div>
 											</div>
@@ -744,12 +744,12 @@
 												</h5>
 												<div class="input-group betnero_flex">
 													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio" id="betnero_si" name="telefon-2" value="si">
-														<label class="form-check-label" for="betnero_si">Si</label>
+														<input class="form-check-input" type="radio" id="betnero_si_9" name="telefon-2" value="si">
+														<label class="form-check-label" for="betnero_si_9">Si</label>
 													</div>
 													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio" id="betnero_no" name="telefon-2" value="no">
-														<label class="form-check-label" for="betnero_no">No</label>
+														<input class="form-check-input" type="radio" id="betnero_no_9" name="telefon-2" value="no">
+														<label class="form-check-label" for="betnero_no_9">No</label>
 													</div>
 												</div>
 											</div>
@@ -970,8 +970,8 @@
 		</div>
 	</div>
 	<!-- end of Modal -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230515014245" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-	<script src="js/app.min.js?_v=20230515014245"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230530035353" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="js/app.min.js?_v=20230530035353"></script>
 </body>
 
 </html>
